# BrainFuck

./: .gitignore  AGENTS.md  BENCH.md  Cargo.toml  bench.md
.cargo/: config.toml
.devin/: wiki.json
benches/: arena.rs  insn.rs  interpret.rs  jit.rs  optim.rs  parse.rs
crates/asmbin/: .gitignore  Cargo.toml  README.md
crates/asmbin-macros/: Cargo.toml
crates/asmbin-macros-impl/: Cargo.toml
crates/asmbin-macros-impl/src/: lib.rs
crates/asmbin-macros/src/: lib.rs
crates/asmbin/src/: buf.rs  builders.rs  data.rs  example.rs  iters.rs  lib.rs  main.rs  main_testing.rs  reg.rs  util.rs
crates/asmbin/src/insn/: PLAN.md  add.rs  cmp.rs  dec.rs  imul.rs  inc.rs  jmp.rs  lea.rs  mod.rs  mov.rs  repne.rs  sub.rs  syscall.rs  xor.rs
demo/: index.html  package.json  rspack.config.ts  tsconfig.json
demo/src/: index.css  index.ts
src/: cli.rs  comp.rs  cryaboutit.rs  interp.rs  interp_unsafe.rs  lib.rs  link.rs  main.rs  optimizer.rs  testing.rs  wasm.rs
src/backend/: mod.rs
src/backend/asm/: copy.rs  insn.rs  io.rs  loops.rs  mod.rs  ptr.rs  simd.rs  value.rs
src/backend/cranelift/: copy.rs  io.rs  loops.rs  mod.rs  ptr.rs  simd.rs  util.rs  value.rs
src/backend/jvm/: copy.rs  io.rs  loops.rs  mod.rs  ptr.rs  value.rs
src/backend/legacy_asm/: copy.rs  insn.rs  io.rs  loops.rs  mod.rs  ptr.rs  value.rs
src/backend/llvm/: copy.rs  io.rs  loops.rs  mod.rs  ptr.rs  value.rs
src/backend/wasm/: copy.rs  io.rs  loops.rs  mod.rs  ptr.rs  simd.rs  value.rs
src/compiler/: llvm.rs  mod.rs
src/compiler/cranelift/: copy.rs  io.rs  loops.rs  mod.rs  ptr.rs  simd.rs  util.rs  value.rs
src/compiler/wasm/: copy.rs  io.rs  loops.rs  mod.rs  ptr.rs  simd.rs  value.rs
src/linker/: android.rs  dummy.rs  linux.rs  macos.rs  mod.rs  win.rs
src/opt/: action.rs  base.rs  chain.rs  chain_v2.rs  copy_loop.rs  copy_loop_v2.rs  dead_code.rs  loop_unroll.rs  loops.rs  loops_v2.rs  mod.rs  offset_v2.rs  offsets.rs  scan.rs  scan_v2.rs  set_add.rs  set_move.rs  simd.rs  simplify.rs  simplify_v2.rs  sort_offset_v2.rs  useless_end.rs  useless_ops.rs  v2.rs
src/opt/v1/: chain.rs  combos.rs  copy_loop.rs  dead_code.rs  loop_unroll.rs  loops.rs  mod.rs  offsets.rs  scan.rs  set_move.rs  simplify.rs  useless_end.rs  useless_ops.rs
src/opt/v2/: arena.rs  base.rs  chain.rs  combos.rs  copy_loop.rs  dead_code.rs  loop_unroll.rs  loops.rs  mod.rs  offsets.rs  scan.rs  set_move.rs  simplify.rs  sort_offset.rs  useless_end.rs  useless_ops.rs
tests/: fixtures.rs
tests/fixtures/problematic/: WHY.md
