[package]
name = "bf"
version = "0.1.0"
edition = "2024"

[features]
default = ["all", "cli", "testing", "interp", "unsafe-speed"]

# Enable all codegen backends.
all = ["asm", "cranelift", "llvm", "jvm", "wasm"]

# Enable the CLI interface.
cli = ["dep:clap", "dep:pretty_env_logger", "dep:clap-verbosity-flag"]

# Tools for testing.
testing = []

# Support AOT & JIT compilation with Cranelift.
cranelift = [
    "dep:cranelift",
    "dep:cranelift-codegen",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-native",
    "dep:cranelift-object",
    "dep:target-lexicon",
    "dep:lnk",
    "dep:which",
    "dep:tempfile",
]

# Support AOT & JIT compilation with LLVM.
llvm = [
    "dep:inkwell",
    "dep:target-lexicon",
    "dep:tempfile",
    "dep:which",
    "dep:lnk",
]

# Support WASM interop.
web = [
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:wasm-bindgen-futures",
    "dep:console_error_panic_hook",
    "dep:console_log",
    "dep:web-time",
]

# Support the WASM backend.
wasm = ["dep:wasm-encoder", "dep:wasmparser"]

# Support the raw ASM backend.
asm = ["dep:asmbin", "dep:object"]

# Support the interpreter.
interp = []

# Support Java class output.
jvm = ["dep:ristretto_classfile"]

# Enable unsafe compiler speed optimizations.
unsafe-speed = []

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bf"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
anyhow = "1.0.102"
asmbin = { version = "0.1.0", path = "crates/asmbin", optional = true }
clap = { version = "4.6.0", features = ["derive"], optional = true }
clap-verbosity-flag = { version = "3.0.4", optional = true, default-features = false, features = [
    "log",
] }
console_error_panic_hook = { version = "0.1.2", optional = true }
console_log = { version = "1.0.0", optional = true }
cranelift = { version = "0.130.1", optional = true }
cranelift-codegen = { version = "0.130.1", optional = true, features = [
    "capstone",
    "core",
    "disas",
    "isle-errors",
    "x86",
] }
cranelift-jit = { version = "0.130.1", optional = true }
cranelift-module = { version = "0.130.1", optional = true }
cranelift-native = { version = "0.130.1", optional = true }
cranelift-object = { version = "0.130.1", optional = true }
enum-display = "0.2.1"
inkwell = { version = "0.8.0", git = "https://github.com/TheDan64/inkwell", rev = "832a4487ee4010a957f5143c7d92242d2ffa22a5", features = [
    "llvm21-1",
], optional = true }
itertools = "0.14.0"
js-sys = { version = "0.3.91", optional = true }
log = "0.4.29"
object = { version = "0.39.0", optional = true, features = [
    "write",
    "core",
    "alloc",
    "build",
    "build_core",
] }
once_cell = "1.21.4"
parking_lot = { version = "0.12.5", features = ["owning_ref"] }
pastey = "0.2.1"
pretty_env_logger = { version = "0.5.0", optional = true }
ristretto_classfile = { version = "0.30.0", optional = true }
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_stacker = "0.1.14"
target-lexicon = { version = "0.13.5", optional = true }
tempfile = { version = "3.27.0", optional = true }
wasm-bindgen = { version = "0.2.114", optional = true }
wasm-bindgen-futures = { version = "0.4.68", optional = true }
wasm-encoder = { version = "0.246.2", optional = true }
wasmparser = { version = "0.246.2", optional = true }
web-time = { version = "1.1.0", optional = true }
which = { version = "8.0.2", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
lnk = { version = "0.6.4", optional = true }

[dev-dependencies]
criterion = "0.8.2"
dir-test = "0.4.1"
pastey = "0.2.1"

[[bench]]
name = "interpret"
path = "benches/interpret.rs"
harness = false
required-features = ["interp"]

[[bench]]
name = "parse"
path = "benches/parse.rs"
harness = false

[[bench]]
name = "optim"
path = "benches/optim.rs"
harness = false

[[bench]]
name = "arena"
path = "benches/arena.rs"
harness = false

[[bench]]
name = "insn"
path = "benches/insn.rs"
harness = false

[[bench]]
name = "jit"
path = "benches/jit.rs"
harness = false
required-features = ["cranelift"]

[profile.bench]
debug = true

[workspace]
resolver = "3"
members = ["./crates/*"]
